Revert to type jar.
  - Using bundle type changes artifact name.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1587791 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -24,7 +24,7 @@
     <relativePath>../</relativePath>
   </parent>
   <artifactId>log4j-api</artifactId>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
   <name>Apache Log4j API</name>
   <description>The Log4j API</description>
   <properties>
