Add initial implementation of Log4j Camel component.
  - Still needs more unit tests, but there's several that can be stolen from camel-core.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1588052 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -914,6 +914,7 @@
     <module>log4j-bom</module>
     <module>log4j-plugin-processor</module>
     <module>log4j-streams</module>
+    <module>log4j-camel</module>
   </modules>
   <profiles>
     <profile>
