--- a/log4j-core/src/test/resources/log4j-test1.yaml
+++ b/log4j-core/src/test/resources/log4j-test1.yaml
@@ -4,7 +4,7 @@ Configuration:
   properties:
     property:
       name: filename
-      value: target/test.log
+      value: target/test-yaml.log
   thresholdFilter:
     level: debug
   appenders:
