--- a/log4j-camel/pom.xml
+++ b/log4j-camel/pom.xml
@@ -70,4 +70,13 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
