--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -64,6 +64,12 @@
         <artifactId>log4j-slf4j-impl</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <!-- Streaming API -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-streams</artifactId>
+        <version>${project.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
