--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -246,7 +246,7 @@
           </execution>
         </executions>
         <configuration>
-          <mainClass>org.apache.logging.log4j.core.config.plugins.PluginManager</mainClass>
+          <mainClass>org.apache.logging.log4j.core.config.plugins.util.PluginManager</mainClass>
           <arguments>
             <argument>${project.build.outputDirectory}</argument>
           </arguments>
