Clean up comments.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1590195 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -195,7 +195,7 @@
       <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
-    <!-- XXX: Spring tests? -->
+    <!-- Spring tests (JNDI and such) -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
@@ -240,13 +240,6 @@
               <proc>only</proc>
             </configuration>
           </execution>
-          <!--execution>
-            <id>default-testCompile</id>
-            <goals>
-              <goal>testCompile</goal>
-            </goals>
-            <phase>test-compile</phase>
-          </execution-->
         </executions>
       </plugin>
       <plugin>
