Add basic OSGi activator class.
  - Registers Log4jContextFactory as the LogManager.factory.
  - Tracks future bundle start-ups to find Log4j plugins (still need 
  to add code to check existing bundles) via the plugin cache file.
  - Pre-loads plugin classes using proper ClassLoader for future use 
  by configurations.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1590443 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -260,6 +260,7 @@
           <instructions>
             <Bundle-SymbolicName>org.apache.logging.log4j.core</Bundle-SymbolicName>
             <Export-Package>org.apache.logging.log4j.core.*</Export-Package>
+            <Bundle-Activator>org.apache.logging.log4j.core.config.plugins.osgi.Activator</Bundle-Activator>
           </instructions>
         </configuration>
       </plugin>
