Fix manifest build error.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1590470 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-taglib/pom.xml
+++ b/log4j-taglib/pom.xml
@@ -93,6 +93,10 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
   <reporting>
