Fix log4j-samples flume builds.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1590480 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-samples/flume-embedded/pom.xml
+++ b/log4j-samples/flume-embedded/pom.xml
@@ -134,6 +134,10 @@
           </systemProperties>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 </project>
