--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -311,6 +311,7 @@
           <linksource>true</linksource>
           <links>
             <link>http://docs.oracle.com/javaee/6/api/</link>
+            <link>http://www.osgi.org/javadoc/r4v43/core/</link>
           </links>
           <tags>
             <tag>
