Split off log4j-nosql to its own module.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1590833 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -899,6 +899,7 @@
     <module>log4j-jmx-gui</module>
     <module>log4j-samples</module>
     <module>log4j-bom</module>
+    <module>log4j-nosql</module>
   </modules>
   <profiles>
     <profile>
