Add name and description to pom.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1590834 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-nosql/pom.xml
+++ b/log4j-nosql/pom.xml
@@ -27,6 +27,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>log4j-nosql</artifactId>
+  <name>Apache Log4j NoSQL Plugins</name>
+  <description>Use NoSQL databases such as MongoDB and CouchDB to append log messages.</description>
 
   <dependencies>
     <dependency>
