Initial migration of servlet code to log4j-web.
  - Moved classes and tests.
  - Updated Interpolator to reference the new FQCN.
  - Documentation still needs to be updated.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1592395 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-samples/flume-embedded/src/main/webapp/WEB-INF/web.xml
+++ b/log4j-samples/flume-embedded/src/main/webapp/WEB-INF/web.xml
@@ -46,7 +46,7 @@
 	</session-config>
 
 	<listener>
-		<listener-class>org.apache.logging.log4j.core.web.Log4jServletContextListener</listener-class>
+		<listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
 	</listener>
 
 	<context-param>
