Update log4j-web pom.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1592397 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-web/pom.xml
+++ b/log4j-web/pom.xml
@@ -27,6 +27,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>log4j-web</artifactId>
+  <packaging>jar</packaging>
+  <name>Apache Log4j Web</name>
+  <description>Support for Log4j in a web servlet container</description>
 
   <dependencies>
     <dependency>
@@ -71,6 +74,8 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
+            <!-- we compile against 3.0, but require 2.5 minimum -->
+            <Import-Package>javax.servlet;version="[2.5,4)",*</Import-Package>
             <Export-Package>org.apache.logging.log4j.web</Export-Package>
           </instructions>
         </configuration>
