--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,18 @@
         <version>${jackson2.version}</version>
         <optional>true</optional>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-xml</artifactId>
+        <version>${jackson2.version}</version>
+        <optional>true</optional>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.module</groupId>
+        <artifactId>jackson-module-jaxb-annotations</artifactId>
+        <version>${jackson2.version}</version>
+        <optional>true</optional>
+      </dependency>      
       <!-- Jackson 2 end -->
       <dependency>
         <groupId>com.sun.mail</groupId>
