Override commons-logging dependency version for tests.
  - LOG4J2-641

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1595682 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -175,6 +175,11 @@
       <artifactId>mockejb</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <scope>test</scope>
+    </dependency>
     <!-- Logback performance tests -->
     <dependency>
       <groupId>ch.qos.logback</groupId>
