--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
     <maven.compile.target>1.6</maven.compile.target>
     <docLabel>Site Documentation</docLabel>
     <projectDir />
+    <commons.logging.version>1.1.3</commons.logging.version>
   </properties>
   <pluginRepositories>
     <pluginRepository>
@@ -273,6 +274,11 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-jcl</artifactId>
         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>${commons.logging.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
@@ -484,6 +490,12 @@
         <artifactId>mockejb</artifactId>
         <version>0.6-beta2</version>
         <scope>test</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
  	    <dependency>
         <groupId>javax.servlet</groupId>
