--- a/pom.xml
+++ b/pom.xml
@@ -664,6 +664,11 @@
             <encoding>UTF-8</encoding>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${surefire.plugin.version}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
