Specify failsafe plugin version in pluginManagement.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1595714 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -669,6 +669,11 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${surefire.plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${surefire.plugin.version}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
