--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -238,6 +238,8 @@
           <excludedGroups>
             org.apache.logging.log4j.categories.PerformanceTests
           </excludedGroups>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
         </configuration>
       </plugin>
       <plugin>
