--- a/pom.xml
+++ b/pom.xml
@@ -751,8 +751,8 @@
             <java.awt.headless>true</java.awt.headless>
           </systemPropertyVariables>
           <argLine>-Xms256m -Xmx1024m</argLine>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
+          <forkCount>2C</forkCount>
+          <reuseForks>true</reuseForks>
           <excludes>
             <exclude>${log4j.skip.test1}</exclude>
             <exclude>${log4j.skip.test2}</exclude>
