Add guidelines. Add web and nosql projects to site
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1595739 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-web/pom.xml
+++ b/log4j-web/pom.xml
@@ -31,6 +31,12 @@
   <name>Apache Log4j Web</name>
   <description>Support for Log4j in a web servlet container</description>
 
+  <properties>
+    <log4jParentDir>${basedir}/..</log4jParentDir>
+    <docLabel>Web Documentation</docLabel>
+    <projectDir>/log4j-web</projectDir>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
