--- a/log4j-bom/pom.xml
+++ b/log4j-bom/pom.xml
@@ -77,5 +77,17 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.0</version>
+        <configuration>
+          <skip>true</skip>
+          <skipDeploy>true</skipDeploy>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
