--- a/log4j-nosql/pom.xml
+++ b/log4j-nosql/pom.xml
@@ -29,6 +29,11 @@
   <artifactId>log4j-nosql</artifactId>
   <name>Apache Log4j NoSQL Plugins</name>
   <description>Use NoSQL databases such as MongoDB and CouchDB to append log messages.</description>
+  <properties>
+    <log4jParentDir>${basedir}/..</log4jParentDir>
+    <docLabel>NoSQL Documentation</docLabel>
+    <projectDir>/log4j-nosql</projectDir>
+  </properties>
 
   <dependencies>
     <dependency>
