--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -146,6 +146,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <scope>test</scope>
+    </dependency>
     <!-- Mocking framework for use with JUnit -->
     <dependency>
       <groupId>org.easymock</groupId>
