LOG4J2-654: added log4j-perf module with support for JMH microbenchmark performance tests
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1597422 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -981,6 +981,7 @@
     <module>log4j-bom</module>
     <module>log4j-nosql</module>
     <module>log4j-web</module>
+    <module>log4j-perf</module>
   </modules>
   <profiles>
     <profile>
