Replace sun.misc.BASE64Decoder with org.apache.commons.codec.binary.Base64.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1597606 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -207,6 +207,12 @@
       <artifactId>org.apache.felix.framework</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Other -->
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
