--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -78,6 +78,11 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+    <dependency>
+      <groupId>com.lmax</groupId>
+      <artifactId>disruptor</artifactId>
+      <version>3.2.1</version>
+    </dependency>
   </dependencies>
 
   <build>
