Adding myself as a committer
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1600805 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -100,11 +100,11 @@
       <timezone>America/Chicago</timezone>
     </developer>
     <developer>
-      <id></id>
+      <id>bbrouwer</id>
       <name>Bruce Brouwer</name>
       <email>bruce.brouwer@gmail.com</email>
       <roles>
-        <role>Contributor</role>
+        <role>Committer</role>
       </roles>
       <timezone>America/Detroit</timezone>
     </developer>
