Use more explicit OSGi export.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1601041 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -102,7 +102,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Export-Package>*</Export-Package>
+            <Export-Package>org.apache.logging.log4j.*</Export-Package>
           </instructions>
         </configuration>
       </plugin>
