--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
     <flumeVersion>1.5.0</flumeVersion>
     <disruptor.version>3.2.1</disruptor.version>
     <!-- Configuration properties for the OSGi maven-bundle-plugin -->
-    <project.version.osgi>2.0.0</project.version.osgi>
+    <project.version.osgi>2.0.0.RC2-SNAPSHOT</project.version.osgi>
     <osgi.symbolicName>org.apache.logging.${project.artifactId}</osgi.symbolicName>
     <osgi.export>org.apache.logging.log4j.*;version=${project.version};-noimport:=true</osgi.export>
     <osgi.import>*</osgi.import>
@@ -478,7 +478,7 @@
         <artifactId>jackson-module-jaxb-annotations</artifactId>
         <version>${jackson2.version}</version>
         <optional>true</optional>
-      </dependency>      
+      </dependency>
       <!-- Jackson 2 end -->
       <dependency>
         <groupId>com.sun.mail</groupId>
