Fix OSGi API artifact name.
  - OSGi artifacts are usually named after their bundle identifiers. 
  See for example every artifact by Eclipse.

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1602782 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -41,7 +41,7 @@
     <!-- Used for OSGi bundle support -->
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>core</artifactId>
+      <artifactId>org.osgi.core</artifactId>
       <scope>provided</scope>
     </dependency>
     <!-- Required for AsyncLoggers -->
@@ -79,7 +79,7 @@
       <artifactId>woodstox-core-asl</artifactId>
       <version>4.3.0</version>
       <optional>true</optional>
-    </dependency>    
+    </dependency>
     <!-- Required for console color support in Windows -->
     <dependency>
       <groupId>org.fusesource.jansi</groupId>
