Add OSGi API as provided dependency in log4j-api.
  - Being OSGi, this only affects OSGi users.
  - Without this dependency, things work as usual (so this JAR still 
  works on its own).

git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1602783 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -34,6 +34,11 @@
   </properties>
   <dependencies>
     <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
