--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
     <logback.version>1.0.13</logback.version>
     <log4jParentDir>${basedir}</log4jParentDir>
     <Log4jReleaseVersion>2.0-rc2</Log4jReleaseVersion>
-    <Log4jReleaseCount>eleventh</Log4jReleaseCount>
+    <Log4jReleaseCount>thirteenth</Log4jReleaseCount>
     <jackson1.version>1.9.13</jackson1.version>
     <jackson2.version>2.3.3</jackson2.version>
     <spring.version>3.2.8.RELEASE</spring.version>
