--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -213,6 +213,12 @@
       <artifactId>commons-codec</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>2.3</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
