--- a/log4j-nosql/pom.xml
+++ b/log4j-nosql/pom.xml
@@ -25,7 +25,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>log4j-nosql</artifactId>
-  <name>Apache Log4j NoSQL Plugins</name>
+  <name>Apache Log4j NoSQL</name>
   <description>Use NoSQL databases such as MongoDB and CouchDB to append log messages.</description>
   <properties>
     <log4jParentDir>${basedir}/..</log4jParentDir>
