--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Build with Maven (Linux)
         if: runner.os == 'Linux'
-        run: ./mvnw -V -B -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true verify --global-toolchains .github/workflows/maven-toolchains.xml
+        run: ./mvnw -V -B -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true --global-toolchains .github/workflows/maven-toolchains.xml verify
 
       - name: Inspect environment (Windows)
         if: runner.os == 'Windows'
@@ -52,7 +52,7 @@ jobs:
 
       - name: Build with Maven (Windows)
         if: runner.os == 'Windows'
-        run: ./mvnw -V -B -e -DtrimStackTrace=false -Dmaven.test.failure.ignore=true verify --global-toolchains ".github\workflows\maven-toolchains.xml"
+        run: ./mvnw -V -B -e -DtrimStackTrace=false "-Dmaven.test.failure.ignore=true" --global-toolchains ".github\workflows\maven-toolchains.xml" verify
 
       - name: Publish Test Results
         uses: scacap/action-surefire-report@v1
