--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           check_name: 'Linux Test Report'
+          report_paths: '**/*-reports/TEST-*.xml'
 
       - name: Inspect environment (Windows)
         if: runner.os == 'Windows'
@@ -67,3 +68,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           check_name: 'Windows Test Report'
+          report_paths: '**/*-reports/TEST-*.xml'
