Simplify JUnit dependencies

--- a/log4j-api/pom.xml
+++ b/log4j-api/pom.xml
@@ -51,16 +51,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter-migrationsupport</artifactId>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
