--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,8 @@
     <!-- Allow Clirr severity to be overriden by the command-line option -DminSeverity=level -->
     <minSeverity>info</minSeverity>
     <jctoolsVersion>1.2.1</jctoolsVersion>
+    <junitVersion>4.13</junitVersion>
+    <junitJupiterVersion>5.6.2</junitJupiterVersion>
     <mockitoVersion>2.25.1</mockitoVersion>
     <argLine>-Xms256m -Xmx1024m</argLine>
     <javaTargetVersion>1.8</javaTargetVersion>
@@ -690,28 +692,35 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>5.6.2</version>
+        <version>${junitJupiterVersion}</version>
         <scope>test</scope>
       </dependency>
       <!-- JUnit 4 to 5 migration support -->
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-migrationsupport</artifactId>
-        <version>5.6.2</version>
+        <version>${junitJupiterVersion}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- JUnit 5 parameterized test support -->
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-params</artifactId>
+        <version>${junitJupiterVersion}</version>
         <scope>test</scope>
       </dependency>
       <!-- JUnit 4 API dependency -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.13</version>
+        <version>${junitVersion}</version>
         <scope>test</scope>
       </dependency>
       <!-- JUnit 4 engine -->
       <dependency>
         <groupId>org.junit.vintage</groupId>
         <artifactId>junit-vintage-engine</artifactId>
-        <version>5.6.2</version>
+        <version>${junitJupiterVersion}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
